--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
-  "name": "bird-eye-shooter",
+  "name": "multiplayer-bird-eye-shooter",
   "version": "1.0.0",
+  "description": "Multiplayer top-down shooter game with Socket.IO",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [
+    "game",
+    "multiplayer",
+    "socket.io",
+    "shooter",
+    "realtime"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
